--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,17 @@ dependencies:
   shared_preferences: ^2.2.2
   geolocator: ^8.2.0
   geocoding: ^2.0.4
+  intl: ^0.19.0
+  flutter_widget_from_html: ^0.14.11
+  animated_splash_screen: ^1.3.0
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: "^0.9.0"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,7 +63,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  image_path: "assets/icons/Eco1.png"
+  android: true
+  ios: true
+  # optionally, as transparency is not allowed on app store
+  # remove_alpha_ios: true
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -66,9 +78,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/logo-color.png
+     - assets/icons/Eco1.png
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
